<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">De-Bloater</string>

    <string name="about">About</string>
    <string name="about_summary">De-Bloater is an application using the power of Magisk to debloat unwanted applications systemless-ly!</string>
    <string name="active">Active</string>
    <string name="active_app_summary">The entire application list is detailed below. The applications that are assigned to remove will be systemless-ly debloated after a reboot!</string>
    <string name="aosp">AOSP</string>
    <string name="apply">Apply</string>
    <string name="apps">%s Applications</string>
    <string name="apps_all">All</string>
    <string name="apps_system">/system</string>
    <string name="apps_vendor">/vendor</string>
    <string name="apps_product">/product</string>
    <string name="app_summary">Use the power of Magisk to de-bloat system applications systemless-ly</string>
    <string name="asus">ASUS</string>
    <string name="backup">Backup</string>
    <string name="backup_list_empty">You haven\'t removed any apps yet!</string>
    <string name="backup_message">Backup files is created as %s!</string>
    <string name="backup_share_message">In order to create a database of pre-defined profiles for public usage, please consider sharing the best de-bloater profiles made by you with the developer of De-Bloater. Thank You!\n\nEmail: smartpack.org@gmail.com\nTelegram: https://t.me/smartpack_kmanager</string>
    <string name="cancel">Cancel</string>
    <string name="carrier">Carrier</string>
    <string name="change_logs">Change-logs</string>
    <string name="change_logs_summary">View recent changes on this app</string>
    <string name="check_update">Update Check</string>
    <string name="check_update_summary">Check for new versions of De-Bloater</string>
    <string name="custom_scripts">Custom Scripts</string>
    <string name="custom_scripts_applied_message">Everything done! The changes will be done after a reboot.</string>
    <string name="custom_scripts_tomatot">Tomatot Debloater</string>
    <string name="custom_scripts_tomatot_list">The following apps are included in this script!</string>
    <string name="custom_scripts_tomatot_extreme">Remove all the apps included in the invisible and light list as well as a few Google Apps and features that are not absolutely necessary but useful for some people.</string>
    <string name="custom_scripts_tomatot_invisible">Remove only apps related to telemetry or that don\'t have any function.</string>
    <string name="custom_scripts_tomatot_light">Remove all the apps included in the invisible list as well as some other apps that rarely used.</string>
    <string name="custom_scripts_tomatot_Summary">Adaptation of the debloater script originally developed by Tomatot for OnePlus 6! Please use this script on other devices at your own risk.</string>
    <string name="custom_scripts_uad">Universal Android Debloater</string>
    <string name="custom_scripts_uad_disabled">This script is currently disabled!</string>
    <string name="custom_scripts_uad_enabled">This script is currently enabled!</string>
    <string name="custom_scripts_uad_summary">Adaptation of the Universal Android Debloater originally developed by W1nst0n with an aim to improve the battery performance and privacy by removing unnecessary and obscure system apps.</string>
    <string name="dismiss">Dismiss</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Donate to support the development!</string>
    <string name="download_failed">It seems like the download is failed, or a corrupted file is downloaded!</string>
    <string name="downloading">Downloading %s</string>
    <string name="extreme">Extreme</string>
    <string name="fdroid">F-Droid</string>
    <string name="fdroid_summary">Visit F-Droid page</string>
    <string name="google">Google</string>
    <string name="get_it">Get It</string>
    <string name="huawei">Huawei</string>
    <string name="inactive">Inactive</string>
    <string name="inactive_apps_summary">The applications that are systemless-ly debloated or assigned to remove are listed in this page!</string>
    <string name="invisible">Invisible</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="invite_friend_summary">Invite a friend to try De-Bloater</string>
    <string name="lg">LG</string>
    <string name="licence">Licence</string>
    <string name="licence_summary">View GPL V3</string>
    <string name="light">Light</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="module_status_reset">Reset Module</string>
    <string name="more_apps">More Apps</string>
    <string name="more_apps_summary">More apps from the developer</string>
    <string name="motorola">Motorola</string>
    <string name="name">Name</string>
    <string name="nokia">Nokia</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="no_magisk">Magisk Not Detected</string>
    <string name="no_root">No Root</string>
    <string name="oneplus">OnePlus</string>
    <string name="oppo">Oppo</string>
    <string name="package_id">Package ID</string>
    <string name="press_back_exit">Press the \'Back\' button again to Exit!</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_Summary">Rate or/and Review De-Bloater in PlayStore</string>
    <string name="reboot">Reboot Device</string>
    <string name="remove">Remove</string>
    <string name="report_issue">Report Issue</string>
    <string name="report_issue_summary">Raise an issue at GitHub</string>
    <string name="restore">Restore</string>
    <string name="restore_error_message">You\'re selected an invalid backup file. Aborting!</string>
    <string name="restore_mismatch_message">You\'re selected a backup file created for a different device or Android version. Do you still want to restore?</string>
    <string name="restore_question">Restore from %s?</string>
    <string name="restoring">Restoring…</string>
    <string name="samsung">Samsung</string>
    <string name="search_hint">Search…</string>
    <string name="share_app_message">Get De-Bloater %s from</string>
    <string name="share_profile">Share Profile</string>
    <string name="sony">Sony</string>
    <string name="sort_by">Sort Apps By</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">Visit GitHub page</string>
    <string name="start">Start</string>
    <string name="status_message_remove">Will be removed after a reboot</string>
    <string name="status_message_restore">Will be restored after a reboot</string>
    <string name="storage_access_denied">Permission denied for writing to storage!</string>
    <string name="support">Support</string>
    <string name="support_summary">Visit support group</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Help me to translate this app!</string>
    <string name="uninstall">Uninstall</string>
    <string name="update_available">New update available!\n(%s)</string>
    <string name="updated_dialog">Congrats! You\'ve already got an up-to-date version of De-Bloater!</string>
    <string name="updated_system_app_warning">You\'re decided to de-bloat \'%s\', a system app which is already updated. Hence, if you really want to remove this app completely, please consider uninstalling the local updates as well. Otherwise, the app will behave as<!----> a normal user app after a reboot!</string>
    <string name="version">Version</string>
    <string name="warning_summary">De-Bloater is too powerful! Please use it carefully. The developer of this application doesn\'t take any responsibility if something wrong happened due the inappropriate use!</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="zte">ZTE</string>
</resources>