<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:gravity="center_vertical"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:tint="?attr/colorAccent"
            android:gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/about"
            android:textColor="?attr/colorAccent"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50sp"
        android:layout_gravity="start"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="?android:attr/colorAccent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/app_summary"
            android:gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="15sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical" >

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/colorBackground"
                    app:cardCornerRadius="15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/change_logs"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:textColor="?attr/colorAccent"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/change_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="16dp"
                        android:gravity="start"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:background="@color/colorBlack"
        android:textColor="?attr/colorAccent"
        android:textSize="18sp"
        android:padding="10dp" />
</com.google.android.material.card.MaterialCardView>