<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            android:padding="15dp" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/ColorBlue"
                android:text="@string/custom_scripts_uad"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_scripts_uad_summary"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/script_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textStyle="bold"
                        android:textSize="17sp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/select_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_select"
                        android:layout_gravity="end"
                        android:background="@null"
                        android:clickable="false" />
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/deblaoter_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="15sp" />

                <FrameLayout
                    android:id="@+id/action_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/action_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:text="@string/apply"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:gravity="end" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/action_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_restore"
                        android:layout_gravity="end"
                        android:background="@null"
                        android:clickable="false" />
                </FrameLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apps_list_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp" >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/apps_list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textStyle="bold"
                        android:text="@string/custom_scripts_tomatot_list"
                        android:textSize="17sp" />
                </FrameLayout>

                <include layout="@layout/layout_recyclerview" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <include layout="@layout/progress_view_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>